# cmpt433_as3

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.c
app/web-server/: Makefile  package-lock.json  package.json  server.js
app/web-server/lib/: beatbox_server.js
app/web-server/public/: index.html
app/web-server/public/javascripts/: beatbox_controller.js
app/web-server/public/stylesheets/: style.css
hal/include/hal/: accel.h  audioGen.h  audioMixer.h  dummy.h  periodTimer.h  shared.h  stick.h  udp.h
hal/src/: accel.c  audioGen.c  audioMixer.c  dummy.c  periodTimer.c  shared.c  stick.c  udp.c
